--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
 streamlit
-bs4
-BeautifulSoup
+beautifulsoup4
 requests
 pandas
 textblob
-TextBlob
-wordcloud 
+wordcloud
 matplotlib
-pyplot
-urllib.parse
-urljoin
 spacy
-json
-sklearn.feature_extraction.text
-TfidfVectorizer
-collections 
-Counter
+scikit-learn
